# TournamentRPS

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  cloudbuild-web-only.yaml  cloudbuild.yaml  deploy.sh
apps/web/: Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json
apps/web/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  trace
apps/web/.next/cache/: .tsbuildinfo
apps/web/.next/cache/webpack/client-development/: index.pack.gz.old
apps/web/.next/cache/webpack/client-production/: 10.pack  11.pack  12.pack  13.pack  2.pack  3.pack  4.pack  5.pack  6.pack  7.pack  8.pack  9.pack  index.pack
apps/web/.next/cache/webpack/edge-server-production/: index.pack
apps/web/.next/cache/webpack/server-development/: index.pack.gz.old
apps/web/.next/cache/webpack/server-production/: 2.pack  index.pack  index.pack.old
apps/web/.next/server/: middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
apps/web/.next/server/app/: _not-found.html  _not-found.rsc  index.html  index.rsc  page.js  page_client-reference-manifest.js
apps/web/.next/server/app/_not-found/: page.js  page_client-reference-manifest.js
apps/web/.next/server/chunks/: 819.js
apps/web/.next/server/pages/: 404.html  500.html
apps/web/.next/server/vendor-chunks/: @atproto.js  @swc.js  await-lock.js  graphemer.js  iso-datestring-validator.js  multiformats.js  next.js  tlds.js  uint8arrays.js  zod.js
apps/web/.next/static/chunks/: 156-b1e1c6b34d96f421.js  5eb2fc6e-2ef373155d2365e2.js  64c9ffd2-a4d235c98c305c97.js  app-pages-internals.js  main-15eff1674b838ba4.js  main-app-2b6803d0e13f8cce.js  main-app-b9d862d40785c87e.js  webpack-8569ab768dc6b0f5.js  webpack.js
apps/web/.next/static/chunks/app/: layout-2f9607da0ccbd9e8.js  layout-cb3f8161d985bfc1.js  layout.js  page-1dd403fe30eda180.js  page-4c3f59b683187a01.js  page-b63e7f3e3f81d1d1.js  page-cdbfe96c2ccda66f.js  page-f72f666fd08e1394.js
apps/web/.next/static/css/: cbe518017e4c38ba.css
apps/web/.next/static/css/app/: layout.css
apps/web/.next/types/app/: layout.ts  page.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/admin/: page.tsx
apps/web/src/app/ai/: IocainePowderAI.ts
infra/terraform/: main.tf  variables.tf
services/atproto-writer/: Cargo.toml  Dockerfile
services/atproto-writer/src/: main.rs
services/coordinator/: Cargo.toml  Dockerfile
services/coordinator/src/: main.rs
services/fairness/: Cargo.toml  Dockerfile
services/fairness/src/: main.rs
services/match-engine/: Cargo.toml  Dockerfile
services/match-engine/src/: main.rs
services/signaling/: Cargo.toml  Dockerfile
services/signaling/src/: main.rs
shared/lexicon/: zone.peace.rps.matchDigest.json  zone.peace.rps.registration.json  zone.peace.rps.roundAnchor.json
shared/proto/: messages.ts
shared/rust-types/: Cargo.toml
shared/rust-types/src/: lib.rs
shared/wasm/: Cargo.toml  dev-build.sh
shared/wasm/src/: lib.rs
tools/simulator/: Cargo.toml
tools/simulator/src/: main.rs
