[package]
name = "rps-coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rps-shared-types = { path = "../../shared/rust-types" }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
