[package]
name = "rps-signaling"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rps-shared-types = { path = "../../shared/rust-types" }
