[package]
name = "rps-signaling"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rps-shared-types = { path = "../../shared/rust-types" }
futures = "0.3"
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tower-http = { workspace = true }
once_cell = { workspace = true }
